test/ui/cc_use.rs
cc_use!("cc_use.h", Foo, Baz, Bar);
